--- a/BD/ejer1-board/package.json
+++ b/BD/ejer1-board/package.json
@@ -7,12 +7,12 @@
     "watch": "nodemon -e js,html,css src/app.js"
   },
   "dependencies": {
-    "mongodb": "^6.20.0",
     "express": "5.1.0",
+    "mongodb": "^6.20.0",
     "multer": "2.0.2",
     "mustache-express": "1.3.2"
   },
   "devDependencies": {
-    "nodemon": "3.1.10"
+    "nodemon": "^3.1.10"
   }
 }
